Bug 446663.  Make sure that if the user is typing in a text input its text input listener will get the events (so that undo/redo work and oninput is fired).